# horovod

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.ray.gpu  Dockerfile.test.cpu  Dockerfile.test.gpu  Dockerfile.test.xpu  GOVERNANCE.md  Jenkinsfile.ppc64le  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  SECURITY.md  _ray_horovod.yaml  ai_improvements.py  assert-package-versions.sh  build-docker-images.sh  callbacks_tf.py  cifar10_ray_elastic.py  config.default.yaml  develop.sh  docker-compose.test.yml  hide_nccl.lds  horovod.exp  horovod.lds  horovod_install.sh  horovodrun.py  (+7 more)
.buildkite/: gen-pipeline.sh  get_changed_code_files.py  get_commit_files.py  get_pull_request_files.py
.buildkite/hooks/: environment
.github/: add-cache-to-docker-compose.sh  dependabot.yml  gen-workflow-ci.py  get-changed-code-files.py  pull_request_template.md  requirements.txt  stale.yml  timeout-and-retry.sh
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: auto-cancel-fork.yaml  auto-cancel.yaml  buildkite_unit_tests.yml  buildkite_unit_tests_branch.yml  buildkite_unit_tests_master.yml  ci-fork.yaml  ci-fork.yml  ci-results.yaml  ci.yaml  codeql-analysis.yml  docker.yml  docs-summary.yml  examples-keras-spark3-rossmann.yml  (+2 more)
_custom_build/: backend.py
cmake/: Utilities.cmake  build_utils.py
code_reading/: README.md  background_thread.md  torch_api.md
docker/: README.md
docs/: Adasum User Guide.md  Makefile  adasum_small_model.py  adasum_user_guide.rst  adasum_user_guide_include.rst  api.rst  autotune.rst  autotune_include.rst  benchmarks.md  benchmarks.rst  benchmarks_include.rst  ccl.md  concepts.md  concepts.rst  concepts_include.rst  conda.rst  conda_include.rst  conf.py  contributors.rst  contributors_include.rst  developers.rst  developers_include.rst  docker.md  docker.rst  docker_include.rst  elastic.rst  elastic_include.rst  gpus.md  gpus.rst  gpus_include.rst  hyperparameter_search.rst  hyperparameter_search_include.rst  index.rst  inference.md  inference.rst  inference_include.rst  install.rst  install_include.rst  intel_gpus.rst  keras.rst  (+39 more)
examples/: adasum_bench.ipynb  cntk_mnist.py  gluon_imagenet_resnet50.py  keras_imagenet_resnet50.py  keras_mnist.py  keras_mnist_advanced.py  keras_mnist_ray.py  keras_spark3_rossmann.py  keras_spark3_rossmann.py.patch  keras_spark_mnist.py  keras_spark_rossmann.py  keras_spark_rossmann_estimator.py  keras_spark_rossmann_run.py  keras_spark_rossmann_v0.py  lr_scheduler.py  mxnet_imagenet_resnet50.py  mxnet_mnist.py  pytorch_imagenet_resnet50.py  pytorch_mnist.py  pytorch_mnist_elastic.py  pytorch_spark_mnist.py  pytorch_spark_mnist_legacy.py  pytorch_synthetic_benchmark.py  resnet50_v1b.json  tensorflow2_keras_mnist.py  tensorflow2_keras_mnist_strategy.py  tensorflow2_keras_synthetic_benchmark.py  tensorflow2_mnist.py  tensorflow2_mnist_ray.py  tensorflow2_synthetic_benchmark.py  tensorflow_20_mnist.py  tensorflow_20_synthetic_benchmark.py  tensorflow_keras_mnist.py  tensorflow_mnist.py  tensorflow_mnist_eager.py  tensorflow_mnist_estimator.py  tensorflow_synthetic_benchmark.py  tensorflow_word2vec.py  test_reduce.py
horovod/: BUILD  __init__.py  metadata.json
horovod/common/ops/cuda/: CMakeLists.txt  adasum_cuda_kernels.cu  adasum_cuda_kernels.h  cuda_kernels.cu  cuda_kernels.h  msallreduce_cuda_kernels.cu
horovod/common/ops/gpu/: CMakeLists.txt  gpu_kernels.cu  gpu_kernels.h
horovod/common/ops/rocm/: CMakeLists.txt  hip_kernels.cu  hip_kernels.h
horovod/mxnet/: CMakeLists.txt  __init__.py  adapter.cc  adapter.h  compression.py  cuda_util.cc  cuda_util.h  functions.py  handle_manager.cc  handle_manager.h  mpi_ops.cc  mpi_ops.h  mpi_ops.py  ready_event.cc  ready_event.h  tensor_util.cc  tensor_util.h  util.h
horovod/mxnet/partition_trainer/: README.md  pos_trainer.py
horovod/tensorflow/: CMakeLists.txt  __init__.py  compression.py  compute_service.py  compute_worker.py  custom_call_config.fbs  custom_call_config_generated.h  elastic.py  functions.py  gradient_aggregation.py  gradient_aggregation_eager.py  hash_vector.h  mpi_message.cc  mpi_message.h  mpi_ops.cc  mpi_ops.py  mpi_ops_test.py  strategy.py  sync_batch_norm.py  timeline.cc  timeline.h  util.py  xla_mpi_ops.cc
horovod/tensorflow/data/: compute_service.py  compute_worker.py
horovod/tensorflow/keras/: __init__.py  callbacks.py  elastic.py
horovod/tensorflow/wire/: mpi_message.fbs  mpi_message_generated.h
horovod/tensorflow/wire/flatbuffers/: flatbuffers.h
horovod/torch/: CMakeLists.txt  __init__.py  adapter.cc  adapter.h  adapter_v2.cc  adapter_v2.h  compression.py  cuda_util.cc  cuda_util.h  elastic.py  functions.py  handle_manager.cc  handle_manager.h  interface.h  interface_cuda.h  interface_cuda_allgather.h  interface_cuda_allreduce.h  interface_cuda_broadcast.h  mpi_ops.cc  mpi_ops.h  mpi_ops.py  mpi_ops_v2.cc  mpi_ops_v2.h  optimizer.py  ready_event.cc  ready_event.h  sync_batch_norm.py  tensor_util.cc  tensor_util.h  util.py  version.h
horovod/torch/elastic/: __init__.py  sampler.py  state.py
horovod/torch/mpi_lib/: __init__.py
horovod/torch/mpi_lib_impl/: __init__.py
make/: config.mk
test/: common.py  conftest.py  elastic_common.py  parasail_perf_test.py  spark_common.py  test_1st.py  test_2mxnet.py  test_adasum.py  test_adasum_pytorch.py  test_adasum_tensorflow.py  test_apache_mxnet.py  test_buildkite.py  test_cluster_ray.py  test_common.py  test_elastic.py  test_elastic_driver.py  test_foo.py  test_interactive_run.py  test_interactiverun.py  test_keras.py  test_mpi.py  test_msallreduce.py  test_mxnet.py  test_ray.py  test_ray_elastic.py  test_run.py  test_run_common.py  test_run_func.py  test_service.py  test_spark.py  test_spark_keras.py  test_spark_torch.py  test_stall.py  test_tensorflow.py  test_tensorflow2_keras.py  test_tensorflow_eager.py  test_tensorflow_keras.py  test_timeline.py  test_torch.py  test_torch_elastic.py  (+2 more)
(+495 files in other folders)
